Add more project cards and fix grid margin issues

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class='title-container center' id='projects'>
                 <h2 class='title-medium portfolio-title'>Projects</h2>
             </div>
@@ -139,20 +139,28 @@
                         <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music. Trained a classification model using Tensorflow to predict success of a provided music sample.</p>
                     </div>
                 </div>
-                <!--
                 <div class='project card flex-vertical' data-aos='fade'>
                     <div class='project image-container center'>
                         <img src='assets/images/table-tennis-logo.PNG' class='project image'>
-                        Put an iframe here that reflects this website's current scroll state
                     </div>
                     <div class='project title'>
-                        <p>Personal Website</p>
+                        <p class='title-small'>Personal Website</p>
                     </div>
                     <div class='project description'>
-                        <p>This website.</p>
+                        <p class='text-small'>This website. Written in HTML, SCSS, and JavaScript.<br><br>See the source code <a target='_blank' href='https://github.com/arnavthareja/arnavthareja.github.io'>here</a>.</p>
                     </div>
                 </div>
-                -->
+                <div class='project card flex-vertical' data-aos='fade' data-aos-delay='50'>
+                    <div class='project image-container center'>
+                        <img src='assets/images/table-tennis-logo.PNG' class='project image'>
+                    </div>
+                    <div class='project title'>
+                        <p class='title-small'>More on GitHub!</p>
+                    </div>
+                    <div class='project description'>
+                        <p class='text-small'>See more of my projects on my GitHub!<br><br><a target='_blank' href='https://github.com/arnavthareja'>https://github.com/arnavthareja</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
